[gd_scene load_steps=2 format=3 uid="uid://djcajfpfg5wvl05ik8"]

[ext_resource type="Script" path="res://scripts/ui/stoplight_code_popup.gd" id="1"]

[node name="StoplightCodePopup" type="Control"]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 0.0
anchors_bottom = 0.0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 510.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)
bbcode_enabled = true
text = "üìù STOPLIGHT CODE EDITOR"
fit_content = true
scroll_active = false

[node name="HSeparator1" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CodeEdit" type="CodeEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 300)
indent_wrapped_lines = true
indent_size = 4
tab_size = 4
draw_tabs = true
code_folding = true
show_line_numbers = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "‚è± Next change in: 0.0s"

[node name="EditHint" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
text = "üîí Read-only - Code auto-executes"


